--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Hi Scott</title>
-		<script src=script.js><script>
 	</head>
 <body>
+	<script src=script.js></script>
 </body>	
