--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 		<title>Hi Scott</title>
 	</head>
 <body>
-	<script src=script.js></script>
+	<script src=script.js>
+		console.log(sumOfSqaure(6,7)) {alert("the sum of squares is" + sumOfSqaures + " !")}
+	</script>
 </body>	
