--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 <body>
 	<script src=script.js>
-		console.log(sumOfSqaure(6,7)) {alert("the sum of squares is" + sumOfSqaures + " !")}
+	console.log(sumOfSqaure(a,b)) 
 	</script>
 </body>	
