--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 <body>
 	<script src=script.js>
-	console.log(sumOfSqaure(a,b)) 
+	var myFunction = console.log(sumOfSqaure(a,b)) 
 	</script>
 </body>	
