--- a/index.html
+++ b/index.html
@@ -4,7 +4,5 @@
 		<title>Hi Scott</title>
 	</head>
 <body>
-	<script src=script.js>
-		console.log(sumOfSqaure(6,7)) 
-	</script>
+	<script src=script.js></script>
 </body>	
